--- a/front-end/src/components/home/Home.scss
+++ b/front-end/src/components/home/Home.scss
@@ -1,3 +1,4 @@
+// MAIN HOME
 .home {
     display: flex;
     align-items: center;
@@ -13,4 +14,15 @@ video {
     z-index: -1;
     margin-top: 0;
     position: sticky;
+}
+
+// HOME PAGE WITH CARDS
+.homePage {
+    background: #fff;
+    width: 100%;
+    max-width: 1536px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
 }
