added styling to the video and the some divs

--- a/front-end/src/components/home/Home.scss
+++ b/front-end/src/components/home/Home.scss
@@ -17,6 +17,12 @@ video {
 }
 
 // HOME PAGE WITH CARDS
+.paragraphs {
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 1.71;
+    text-transform: none;
+}
 .homePage {
     background: #fff;
     width: 100%;
@@ -26,3 +32,8 @@ video {
     padding-left: 0.5rem;
     padding-right: 0.5rem;
 }
+
+
+// h1 {
+    
+// }
