--- a/front-end/src/components/navBar/NavBar.scss
+++ b/front-end/src/components/navBar/NavBar.scss
@@ -15,6 +15,7 @@
   justify-content: space-around;
   // background-color: #42999b;
   // box-shadow: 2px 2px 4px gray;
+  background: #fff;
   margin-bottom: 30px;
   height: 8vh;
   font-size: 1.2rem;
