--- a/front-end/src/components/cards/Cards.scss
+++ b/front-end/src/components/cards/Cards.scss
@@ -21,6 +21,20 @@
         width: 100%;
         padding-top: 67%;
         overflow: hidden;
+
+        &::after {
+            content: attr(data-category);
+            position: absolute;
+            bottom: 0;
+            margin-left: 10px;
+            padding: 6px 8px;
+            max-width: calc((100%) - 60px);
+            font-size: 12px;
+            font-weight: 700;
+            color: #fff;
+            background-color: #42999B;
+            box-sizing: border-box;
+        }
     }
 
     &__image {
