--- a/front-end/src/components/home/Home.scss
+++ b/front-end/src/components/home/Home.scss
@@ -1,71 +1,71 @@
 // MAIN HOME
 .home {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 3rem;
+  display: flex;
+  height: 70vh;
+  align-items: center;
+  justify-content: center;
+  font-size: 3rem;
 }
 
 video {
-    object-fit: cover;
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    z-index: -1;
-    margin-top: 0;
-    position: sticky;
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  z-index: -1;
+  margin-top: 0;
+  position: sticky;
 }
 
 // HOME PAGE WITH CARDS
 .paragraphs {
-    font-size: 15px;
-    font-weight: 400;
-    line-height: 1.71;
-    text-transform: none;
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 1.71;
+  text-transform: none;
 }
 
 .homePage {
-    background: #fff;
-    width: 100%;
-    max-width: 1536px;
-    margin-left: auto;
-    margin-right: auto;
-    padding-left: 0.5rem;
-    padding-right: 0.5rem;
+  background: #fff;
+  width: 100%;
+  max-width: 1536px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
 
-    &__info {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        margin-bottom: 20px;
+  &__info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 20px;
+  }
+
+  &__btn {
+    background-color: #429998;
+    color: white;
+    border: none;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    font-weight: bold;
+    padding: 10px 50px 10px 50px;
+    border-radius: 25px;
+    letter-spacing: 0.2em;
+
+    &:hover {
+      background-color: #b8dedc;
     }
+  }
 
-    &__btn {
-        background-color: #429998;
-        color: white;
-        border: none;
-        margin-top: 10px;
-        margin-bottom: 10px;
-        font-weight: bold;
-        padding: 10px 50px 10px 50px;
-        border-radius: 25px;
-        letter-spacing: .2em;
-
-        &:hover {
-            background-color: #B8DEDC;
-        }
-    }
-
-    &__cardholder {
-        display: flex;
-        max-width: 1120px;
-        margin-bottom: 24px;
-        justify-content: space-between;
-        margin: 0 auto;
-    }
+  &__cardholder {
+    display: flex;
+    max-width: 1120px;
+    margin-bottom: 24px;
+    justify-content: space-between;
+    margin: 0 auto;
+  }
 }
 
-
 // h1 {
-    
+
 // }
